--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
@@ -22,9 +23,12 @@
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-qrcode-logo": "^3.0.0",
     "react-router-dom": "^7.6.3",
     "react-spinners": "^0.17.0",
+    "recharts": "^3.0.2",
     "tailwind-merge": "^3.3.1",
+    "ua-parser-js": "^2.0.4",
     "yup": "^1.6.1"
   },
   "devDependencies": {
